// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextField Text Field Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-5zh2s1"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-5zh2s1"
        >
          <div
            className="css-1yzjkte"
          >
            <div>
              <input
                className="css-9nc95a"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-cra6n2"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-5zh2s1"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-1nb5dgo"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with KNOBS 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          className="css-14s4iyf"
        >
          <div
            className="css-cra6n2"
          >
            <div
              className="css-1wxpe8h"
            >
              <div
                className="css-94u0u-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-1k5aruc-Icon"
                  />
                </span>
              </div>
              <div>
                <input
                  className="css-whxk0k"
                  disabled={false}
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="css-1yedgls-Label"
                >
                  Label
                   
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-5zh2s1"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-5zh2s1"
        >
          <div
            className="css-1u3ljqn"
          >
            <div>
              <input
                className="css-dnls2o"
                disabled={false}
                placeholder="Label "
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-5zh2s1"
        >
          <div
            className="css-1u3ljqn"
          >
            <div>
              <input
                className="css-1a58avm"
                disabled={false}
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Placeholder, icon and size 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-5zh2s1"
        >
          <div
            className="css-1wxpe8h"
          >
            <div
              className="css-94u0u-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-5zh2s1"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-isy7x3-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-5zh2s1"
        >
          <div
            className="css-1wxpe8h"
          >
            <div
              className="css-94u0u-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-isy7x3-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField disabled with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-17t5xzh"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-1apvxmi"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-1u797ub"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField locked with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-r3zxqm"
            >
              <div
                className="css-1wxpe8h"
              >
                <div>
                  <input
                    className="css-whxk0k"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-isy7x3-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-bulgzf"
            >
              <div
                className="css-1wxpe8h"
              >
                <div>
                  <input
                    className="css-whxk0k"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-isy7x3-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-szff0g"
            >
              <div
                className="css-1wxpe8h"
              >
                <div>
                  <input
                    className="css-whxk0k"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-isy7x3-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-r3zxqm"
            >
              <div
                className="css-1yzjkte"
              >
                <div>
                  <input
                    className="css-9nc95a"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-isy7x3-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-bulgzf"
            >
              <div
                className="css-1yzjkte"
              >
                <div>
                  <input
                    className="css-9nc95a"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-isy7x3-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-szff0g"
            >
              <div
                className="css-1yzjkte"
              >
                <div>
                  <input
                    className="css-9nc95a"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-isy7x3-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with label and statuses 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div>
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-9ax7lg"
              >
                <div
                  className="css-1yzjkte"
                >
                  <div
                    className="css-94u0u-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                    >
                      <span
                        className="css-1k5aruc-Icon"
                      />
                    </span>
                  </div>
                  <div>
                    <input
                      className="css-9nc95a"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-1yedgls-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-szec59"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-hnerwf-Icon"
                />
              </span>
              Error in Text Field
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div>
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-1aoir3w"
              >
                <div
                  className="css-1yzjkte"
                >
                  <div
                    className="css-94u0u-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                    >
                      <span
                        className="css-1k5aruc-Icon"
                      />
                    </span>
                  </div>
                  <div>
                    <input
                      className="css-9nc95a"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-1yedgls-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-szec59"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-hnerwf-Icon"
                />
              </span>
              Error in Text Field
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div>
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-1uj7jtz"
              >
                <div
                  className="css-1yzjkte"
                >
                  <div
                    className="css-94u0u-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                    >
                      <span
                        className="css-1k5aruc-Icon"
                      />
                    </span>
                  </div>
                  <div>
                    <input
                      className="css-9nc95a"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-1yedgls-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-szec59"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-hnerwf-Icon"
                />
              </span>
              Error in Text Field
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div>
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-cra6n2"
              >
                <div
                  className="css-1yzjkte"
                >
                  <div
                    className="css-94u0u-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                    >
                      <span
                        className="css-1k5aruc-Icon"
                      />
                    </span>
                  </div>
                  <div>
                    <input
                      className="css-9nc95a"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-1yedgls-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-4kgaf"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-xjwhwn-Icon"
                />
              </span>
              Error in Text Field
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div>
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-5zh2s1"
              >
                <div
                  className="css-1yzjkte"
                >
                  <div
                    className="css-94u0u-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                    >
                      <span
                        className="css-1k5aruc-Icon"
                      />
                    </span>
                  </div>
                  <div>
                    <input
                      className="css-9nc95a"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-1yedgls-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-4kgaf"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-xjwhwn-Icon"
                />
              </span>
              Error in Text Field
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div>
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-1nb5dgo"
              >
                <div
                  className="css-1yzjkte"
                >
                  <div
                    className="css-94u0u-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                    >
                      <span
                        className="css-1k5aruc-Icon"
                      />
                    </span>
                  </div>
                  <div>
                    <input
                      className="css-9nc95a"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-1yedgls-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-4kgaf"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-xjwhwn-Icon"
                />
              </span>
              Error in Text Field
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
